--- a/dts/arm64/fvp/fvp-aemv8r.dtsi
+++ b/dts/arm64/fvp/fvp-aemv8r.dtsi
@@ -59,48 +59,30 @@
 	soc {
 		interrupt-parent = <&gic>;
 
-		gic: interrupt-controller@af000000 {
+		gic: interrupt-controller@e2000000 {
 			compatible = "arm,gic";
-			reg = <0xaf000000 0x10000>,
-			      <0xaf100000 0x200000>;
+			reg = <0xe2000000 0x10000>,
+			      <0xe2100000 0x200000>;
 			interrupt-controller;
 			#interrupt-cells = <4>;
 			status = "okay";
 		};
 
-		uart0: uart@9c090000 {
+		uart0: uart@f1920000 {
 			compatible = "arm,pl011";
-			reg = <0x9c090000 0x10000>;
+			reg = <0xf1920000 0x10000>;
 			status = "disabled";
 			interrupts = <GIC_SPI 5 IRQ_TYPE_LEVEL IRQ_DEFAULT_PRIORITY>;
 			interrupt-names = "irq_5";
 			clocks = <&uartclk>;
 		};
 
-		uart1: uart@9c0a0000 {
+		uart1: uart@f1930000 {
 			compatible = "arm,pl011";
-			reg = <0x9c0a0000 0x10000>;
+			reg = <0xf1930000 0x10000>;
 			status = "disabled";
 			interrupts = <GIC_SPI 6 IRQ_TYPE_LEVEL IRQ_DEFAULT_PRIORITY>;
 			interrupt-names = "irq_6";
-			clocks = <&uartclk>;
-		};
-
-		uart2: uart@9c0b0000 {
-			compatible = "arm,pl011";
-			reg = <0x9c0b0000 0x10000>;
-			status = "disabled";
-			interrupts = <GIC_SPI 7 IRQ_TYPE_LEVEL IRQ_DEFAULT_PRIORITY>;
-			interrupt-names = "irq_7";
-			clocks = <&uartclk>;
-		};
-
-		uart3: uart@9c0c0000 {
-			compatible = "arm,pl011";
-			reg = <0x9c0c0000 0x10000>;
-			status = "disabled";
-			interrupts = <GIC_SPI 8 IRQ_TYPE_LEVEL IRQ_DEFAULT_PRIORITY>;
-			interrupt-names = "irq_8";
 			clocks = <&uartclk>;
 		};
 	};
